--- a/src/content/blog/rawdatapost2025.mdx
+++ b/src/content/blog/rawdatapost2025.mdx
@@ -9,8 +9,10 @@ draft: false
 
 # 📊 The Raw Data Sheets — Quantifying My Life One Day at a Time
 
-This is my **bread and butter spreadsheet** — the one I open every single day without fail.  
+This is my **bread and butter spreadsheet** — the one I open every single day without fail. My pride and joy, my life's work.
 It’s the heart of LifeLoggerz: a living document in **Google Sheets** that quietly turns days into data, data into trends, and trends into understanding.
+Ironically, building all of these sheets is the one thing that I didn't track timewise. Hundreds of hours have gone into the structure of my sheets.
+However, filling this in every day only takes a few minutes.
 
 ---
 
@@ -26,16 +28,15 @@ So in 2023, I decided to bring structure into the mix.
 
 <figure>
   <img src="/images/rawdatapost/2023-raw-data-sheet.png" alt="2023 Raw Data Sheet" />
-  <figcaption><em>2023: Where it all started. Just seven stats — minimal, monochrome, and a humble size 8 font.</em></figcaption>
+  <figcaption><em>2023: Where it all started. Just a few stats — minimal, mostly monochrome, and size 8 font.</em></figcaption>
 </figure>
 
-Back then, my tracking consisted of **seven metrics**:
-- 3 for sleep  
-- 3 for food  
-- 1 short phrase summarizing the day  
+Back then, my tracking consisted of **six metrics** all on just one sheet:
+- Sleep: Wake Up Time, Hours Slept
+- Food: Breakfast, Lunch, Dinner
+- Summary of the Day: short phrase with day's most important events  
 
-No colors. No fancy formatting.  
-Just a blank grid and the determination to understand myself through numbers.
+No fancy formatting, more stats came later (the ones to the right).
 
 ---
 
@@ -48,14 +49,7 @@ Just a blank grid and the determination to understand myself through numbers.
 
 By 2024, I discovered that my diary logs contained valuable **quantifiable patterns**.  
 Why keep them hidden in text when I could visualize them?  
-So I expanded my spreadsheet — each part of my daily life got its own tab:
-- Food
-- People
-- Quotes
-- Blunders
-- Outfits
-- Places
-- And more  
+So I expanded my spreadsheet — each part of my daily life got its own tab (shown in depth below).
 
 I began **color-coding** and **indexing** every entry — the moment LifeLoggerz became a true data system.
 
@@ -68,9 +62,9 @@ I began **color-coding** and **indexing** every entry — the moment LifeLoggerz
   <figcaption><em>The birth of visual feedback — graphs for habits, work hours, and wellness.</em></figcaption>
 </figure>
 
-This was the first time I saw **my life in charts**.  
+This was the first time I saw **my life in charts** thanks to all the data I was collecting.
 Suddenly, I could see when I was most productive, most social, or most consistent.  
-It was addictive.
+Even with all these extra stats, filling this in daily is a small commitment with big mental benefits.
 
 ---
 
@@ -81,8 +75,43 @@ It was addictive.
   <figcaption><em>2025: A mature system — structured, colorful, and interconnected across sheets.</em></figcaption>
 </figure>
 
-By 2025, I had everything I needed to run full-scale analytics on my life.  
-Each dropdown, each cell, each IF formula connects to a broader network of formulas across sheets.
+By 2025, I had everything I needed to run full-scale analytics on my life.
+The only thing missing was the knowledge of conditional formattting, Google App Scripts, and advanced formulas to simplify/automate laborious tasks.
+For instance, alternating weeks are different colors, and weekends are maroon.
+Alternating months are different colors (yellow for odd months, purple for even months). 
+With code scripts, I can automate tasks like bringing in my daily image from Google Drive, or condensing my diary logs with ChatGPT API.
+
+If you want to know everything that I track just on this one sheet: Sleep, Meals, Weather, Summary of Day, Work, Hobbies, Audiobooks 
+- Column D: Time I Went to Sleep at
+- Column E: Hours Slept
+- Column F: Time I Woke up at
+- Column G: Naps
+- Column I: Breakfast
+- Column J: Lunch
+- Column K: Dinner
+- Column N: Temperature Highs
+- Column O: Temperature Lows
+- Column Q: Summary of Day
+- Column R - Diary Log Word Count
+- Column T - Work Description
+- Column U - Hours Worked
+- Column W - Religious Study
+- Column X - Dictionary Page
+- Column Y - Language Study
+- Column Z - Running (Miles)
+- Column AA - Treadmill (Minutes at 2mph)
+- Column AB - Guitar
+- Columns AD, AE, AF: Audiobooks (timestamp, min)
+
+Notice how there's colors everywhere? **Conditional formatting** does that work for me. 
+I use symbols like [, @, ", *, $, #, and these paint the cells automatically.
+These colors mean different things, and they're incredibly useful for spotting patterns.
+Grey in the Sleep section means that I stayed up past 1am.
+Baby blue in the Weather section means it snowed, red means it was over 100 degrees F. 
+Green in the Audiobooks section represents a new audiobook.
+And so on, and so on. These sheets have data on top of data!
+
+Anyway, let's move on. 
 
 > Check out the individual sheets below — the “organs” that make up this living system.
 
