--- a/src/content/blog/rawdatapost2025.mdx
+++ b/src/content/blog/rawdatapost2025.mdx
@@ -111,7 +111,7 @@ Baby blue in the Weather section means it snowed, red means it was over 100 degr
 Green in the Audiobooks section represents a new audiobook.
 And so on, and so on. These sheets have data on top of data!
 
-Anyway, let's move on. 
+Anyway, let's move on.
 
 > Check out the individual sheets below — the “organs” that make up this living system.
 
@@ -132,7 +132,7 @@ These are all part of the **Raw Data workbook** — the foundation of everything
 </figure>
 
 Money tells stories: of priorities, habits, and decisions.  
-This sheet shows what I spend on, what I invest in, and how balanced the month feels.
+This sheet shows what I spend on, what I invest in, etc.
 
 ---
 
@@ -143,7 +143,9 @@ This sheet shows what I spend on, what I invest in, and how balanced the month f
   <figcaption><em>The complete daily log — a full written record of the day’s thoughts and actions.</em></figcaption>
 </figure>
 
-This is where **raw reflection** lives. Every event, every thought, every memory.
+This is where **raw reflection** lives. Every event, every thought, every memory. I write my log in Obsidian and then copy-paste it here.
+This system allows you to see diary logs next to each other, and Ctrl+F is much easier here than in Obsidian or other apps.
+Feels great to go back to these after a while and relive each day.
 
 ---
 
@@ -154,7 +156,8 @@ This is where **raw reflection** lives. Every event, every thought, every memory
   <figcaption><em>Condensed logs — auto-generated summaries using Google Apps Script and ChatGPT API.</em></figcaption>
 </figure>
 
-Google Apps Script + ChatGPT compress these entries into short summaries, letting me see patterns without losing meaning.
+Google Apps Script + ChatGPT API (explained in future blog post) automatically compress the daily logs into summaries for morning, afternoon, and evening.
+If I need to quickly get info about a day, this is much easier to navigate than the Complete Logs sheet.
 
 ---
 
@@ -162,10 +165,11 @@ Google Apps Script + ChatGPT compress these entries into short summaries, lettin
 
 <figure>
   <img src="/images/rawdatapost/rawdata-quotes.png" alt="Raw Data Quotes" />
-  <figcaption><em>A growing collection of quotes from books, people, and experiences.</em></figcaption>
+  <figcaption><em>A growing collection of quotes from the people in my life.</em></figcaption>
 </figure>
 
-Each quote represents a moment of insight — sometimes my own, sometimes borrowed wisdom.
+At the end of each day, I write down the first thing that I recall someone saying. The most remarkable, funniest, most critical, etc.
+These quotes (and the context provided) help you to plant yourself in that distant memory and relive it. 
 
 ---
 
@@ -173,10 +177,11 @@ Each quote represents a moment of insight — sometimes my own, sometimes borrow
 
 <figure>
   <img src="/images/rawdatapost/rawdata-blunders.png" alt="Raw Data Blunders" />
-  <figcaption><em>Failures become data too — each mistake is logged, tagged, and learned from.</em></figcaption>
+  <figcaption><em>Failures become data too — the point is to make them stand out so that they're easier to avoid repeating.</em></figcaption>
 </figure>
 
-Logging mistakes removes their sting — they become part of improvement, not shame.
+Most days have small ones like 'I woke up late'. When you've seen this 70 times, you eventually decide to do something about it.
+As for big blunders, I needn't say more.
 
 ---
 
@@ -187,8 +192,10 @@ Logging mistakes removes their sting — they become part of improvement, not sh
   <figcaption><em>Daily outfits — color-coded for style, weather, and repetition tracking.</em></figcaption>
 </figure>
 
-It’s not vanity; it’s curiosity.  
-Patterns emerge — color preferences, weather adaptation, and even mood expression.
+It’s not vanity; it’s curiosity. In my case, I dress simply, so this helps me to see when I intentionally stand out.  
+Patterns emerge — color preferences, weather adaptation, and changes in taste.
+I still remember the day I switched from regular cut jeans to carpenter jeans. Very roomy. And that day is reflected here too. 
+Scientific, isn't it?
 
 ---
 
@@ -199,8 +206,8 @@ Patterns emerge — color preferences, weather adaptation, and even mood express
   <figcaption><em>Every meal logged — for health, enjoyment, and consistency.</em></figcaption>
 </figure>
 
-Trends in diet reveal much about discipline and mood.  
-You can see when stress peaks, or when creativity flows — through what’s on the plate.
+Trends in diet reveal much about discipline and mood. I don't track calories, but feel free to add to these sheets HERE (add link to 2026 RD sheet template)
+Stomach aching? Eating too much ice cream? Much easier to pinpoint the culprits here.
 
 ---
 
@@ -223,7 +230,9 @@ Over time, it shows whether I’ve become more exploratory or more homebound.
   <figcaption><em>People and interactions — a map of my social world.</em></figcaption>
 </figure>
 
-This sheet shows the rhythms of my relationships — who I see most, and how that changes over time.
+This sheet catalogs every person that I interacted with on any given day. 
+"When's the last time I saw 'xx'?'. Here's your answer.
+
 
 ---
 
@@ -234,14 +243,16 @@ These **advanced sheets** transform data into insight — and beauty.
 
 ---
 
-### 🧮 Dashboard
+### 🧮 Money Dashboard
 
 <figure>
   <img src="/images/rawdatapost/rawdata-money-dashboard.png" alt="Raw Data Dashboard" />
-  <figcaption><em>The all-in-one overview — spending, productivity, habits, and averages.</em></figcaption>
+  <figcaption><em>The all-in-one overview for your finances — spending habits and averages.</em></figcaption>
 </figure>
 
-This “Money Dashboard” connects with the financial log, showing total expenses, earnings, and goals.
+This “Money Dashboard” connects with the financial log, showing total expenses and earnings.
+Want to know how much you spent on Gas in the month of July 2025? How about Donations in December?
+Just wait until you see the ARCHIVE (provide link here of future blog post) where you can compare your entire life's stats.
 
 ---
 
@@ -249,10 +260,10 @@ This “Money Dashboard” connects with the financial log, showing total expens
 
 <figure>
   <img src="/images/rawdatapost/rawdata-wknd.png" alt="Weekend Summary" />
-  <figcaption><em>A weekend-only snapshot — shows whether I’m resting, socializing, or isolating.</em></figcaption>
+  <figcaption><em>A weekend-only snapshot — shows whether I need to go out more.</em></figcaption>
 </figure>
 
-It’s a mirror for weekend balance — too many blank cells means too much solitude.
+This draws data from the Raw Data sheet, showing us only the weekends. Find yourself binging Netflix instead of going out, or vice versa? Here's the solution.
 
 ---
 
@@ -263,12 +274,16 @@ It’s a mirror for weekend balance — too many blank cells means too much soli
   <figcaption><em>Graphs turning daily logs into trends — visual analytics for self-awareness.</em></figcaption>
 </figure>
 
+And with all the data and stats we've covered, doesn't it feel great to see it all in one place?
+
 ### 📈 Graphs II
 
 <figure>
   <img src="/images/rawdatapost/rawdata-graphs2.png" alt="Raw Data Graphs 2" />
-  <figcaption><em>Deeper patterns: correlations between productivity, rest, and emotion.</em></figcaption>
+  <figcaption><em>Deeper patterns: correlations between productivity, rest, emotion, and more.</em></figcaption>
 </figure>
+
+And how!
 
 ### 🏆 Trophy Shelf
 
@@ -277,6 +292,7 @@ It’s a mirror for weekend balance — too many blank cells means too much soli
   <figcaption><em>Cells turn green when goals are met — a gamified reward system within Sheets.</em></figcaption>
 </figure>
 
+Want to be build something like this? CHECK OUT THIS BLOG POST
 ---
 
 ## 🔗 Related Posts
