--- a/src/content/blog/redditseries.mdx
+++ b/src/content/blog/redditseries.mdx
@@ -1,150 +1,145 @@
 ---
-title: "Reddit Series Coming Soon"
-description: "How I turned scattered notes into an automated habit-tracking, lab-logging, life-analyzing Google Sheets system — and how you can, too"
-pubDate: "2025-10-12"
-heroImage: "/images/finances.png"
+title: "The Raw Data Sheets — Quantifying My Life One Day at a Time"
+pubDate: "2025-10-19"
+description: "The foundation of the LifeLoggerz system — a daily Google Sheet where every stat, habit, and moment gets recorded, forming the base of all future analytics."
+tags: ["LifeLoggerz", "Google Sheets", "Raw Data", "Productivity", "Self-Improvement"]
+heroImage: "/images/rawdatapost/2025-raw-data-sheet.png"
+draft: false
 ---
 
+# 📊 The Raw Data Sheets — Quantifying My Life One Day at a Time
 
-# From Paper Piles to ChatGPT‑Powered Google Sheets — Welcome to LifeLoggerz 📊✨
-
-**Subtitle:** How I turned scattered notes into an automated habit-tracking, lab-logging, life-analyzing Google Sheets system — and how you can, too.
-
----
-
-Hi — I’m **Jose** (23), a civil‑engineering PhD student and the person behind **LifeLoggerz**. This site started because I love designing systems. What began as sticky notes and whiteboards turned into interconnected Google Sheets that track labs, habits, music, moods, and more.
-
-Below is a cleaned, blog‑ready explanation of how LifeLoggerz grew, why I keep building it, and how you can replicate (or simplify) any part of this system.
+This is my **bread and butter spreadsheet** — the one I open every single day without fail.  
+It’s the heart of LifeLoggerz: a living document in **Google Sheets** that turns days into data and data into insight.
 
 ---
 
-## Why LifeLoggerz? (Short version)
-
-- I used to end up with towers of paper, half‑finished notebooks, and scattered ideas.
-- Obsidian and note apps didn’t give me the same flexible structure + live calculations.
-- Google Sheets gives me both: spreadsheets that think (formulas + scripts) and dashboards that tell stories.
-- Also — designing the system scratches the same itch as solving a good engineering problem.
-
-> **Am I overboard?** Maybe. **Is it working?** Definitely. LifeLoggerz is my life, and I enjoy it.
+## 🌱 How It All Began
+In 2022, I was simply writing **daily diary logs**.  
+They captured my thoughts well — but they didn’t quantify anything.  
+So in 2023, I decided to bring structure into the mix.
 
 ---
 
-## The evolution (V1 → V3)
+## 🗓 Evolution of the Raw Data Sheet (2023–2025)
 
-| Year | Version | Big changes |
-|---:|:---|:---|
-| **2023** | **V1** | Manual logs: sleep, food, basic habits |
-| **2024** | **V2** | Added dozens of variables: moods, symptoms, work contexts, music listening |
-| **2025** | **V3** | ChatGPT + Google Apps Script automation, HTML form input, dynamic dashboards |
+<div class="gallery">
+  <figure>
+    <img src="/images/rawdatapost/2023-raw-data-sheet.png" alt="2023 Raw Data Sheet" loading="lazy"/>
+    <figcaption>2023 — Barebones start: six metrics, monochrome layout, and tiny font.</figcaption>
+  </figure>
+  <figure>
+    <img src="/images/rawdatapost/2024-raw-data-sheet.png" alt="2024 Raw Data Sheet" loading="lazy"/>
+    <figcaption>2024 — Color enters; each life aspect gets its own tab.</figcaption>
+  </figure>
+  <figure>
+    <img src="/images/rawdatapost/2024-started-graphing-data.png" alt="2024 Graphing Data" loading="lazy"/>
+    <figcaption>2024 — The first graphs: productivity, habits, wellness trends.</figcaption>
+  </figure>
+  <figure>
+    <img src="/images/rawdatapost/2025-raw-data-sheet.png" alt="2025 Raw Data Sheet" loading="lazy"/>
+    <figcaption>2025 — Mature, automated, interconnected system.</figcaption>
+  </figure>
+</div>
 
-*(I’ll add screenshots of V1 & V2 in the gallery — they show the slow, iterative design process.)*
-
----
-
-## What I track (hundreds of variables)
-
-A non‑exhaustive list so you get the idea:
-
-- **Health & sleep:** bedtime, wake time, nap yes/no, sleep hours, dreams, symptoms
-- **Work & research:** lab batches, mix designs, experiment metadata, time spent on coding/PPTs
-- **Habits & routine:** Duolingo, guitar practice, treadmill minutes, morning routine ticks
-- **Personal life:** meals, social visits, clothing choices, gratitude / blunders log
-- **Media & learning:** books listened, classical pieces by date, Raindrop.io saved links
-- **Misc:** location logs, who I saw, daily weather, mood tags
-
----
-
-## Key benefits (why this is worth the hours)
-
-1. **Self‑insight:** discover patterns that actually matter (e.g., how naps affect lab focus)
-2. **Automation:** one HTML form can update multiple sheets in a single submission
-3. **Scalability:** dashboards and formulas scale from tens to tens of thousands of rows without rewriting logic
-4. **Shareability:** export charts, share templates, or onboard teammates quickly
-5. **Creative flow:** designing the system becomes a productive hobby
+Each version built on the last — from handwritten cells to automated dashboards.
 
 ---
 
-## Roadmap — what’s next for LifeLoggerz
-
-- Finish packaging the unified **Stats Log** modal (HTML + GAS) so anyone can drop it into a sheet.
-- Add real‑time alerts (e.g., boss leaves office → suggestion to take a break).
-- Enable a SQL backend + Power BI for heavier analytics and cross‑sheet joins.
-- Publish a how‑to series: templates, Apps Script snippets, and ChatGPT prompt recipes.
+## 🧩 The Individual Sheets
+Each sheet focuses on one aspect of daily life, working in harmony to build a full picture.  
+These are all part of the **Raw Data workbook** — the foundation of everything else.
 
 ---
 
-## ChatGPT prompt examples I use (copy/paste friendly)
+### 📚 Core Data Tabs
 
-**Mood & energy classification**
+<div class="gallery">
+  <figure><img src="/images/rawdatapost/rawdata-money.png" alt="Raw Data Money"/><figcaption>💰 Money</figcaption></figure>
+  <figure><img src="/images/rawdatapost/rawdata-logs.png" alt="Raw Data Logs"/><figcaption>📜 Logs (Complete)</figcaption></figure>
+  <figure><img src="/images/rawdatapost/rawdata-logs-condensed.png" alt="Raw Data Condensed Logs"/><figcaption>⚙️ Logs (Condensed)</figcaption></figure>
+  <figure><img src="/images/rawdatapost/rawdata-quotes.png" alt="Raw Data Quotes"/><figcaption>💬 Quotes</figcaption></figure>
+  <figure><img src="/images/rawdatapost/rawdata-blunders.png" alt="Raw Data Blunders"/><figcaption>💥 Blunders</figcaption></figure>
+  <figure><img src="/images/rawdatapost/rawdata-outfits.png" alt="Raw Data Outfits"/><figcaption>👕 Outfits</figcaption></figure>
+  <figure><img src="/images/rawdatapost/rawdata-food.png" alt="Raw Data Food"/><figcaption>🍽 Food</figcaption></figure>
+  <figure><img src="/images/rawdatapost/rawdata-places.png" alt="Raw Data Places"/><figcaption>📍 Places</figcaption></figure>
+  <figure><img src="/images/rawdatapost/rawdata-peeps.png" alt="Raw Data People"/><figcaption>🧑‍🤝‍🧑 People</figcaption></figure>
+</div>
 
-```text
-Analyze the diary text in cell D5:
-- Return tone: Positive | Neutral | Negative
-- Return energy: High | Medium | Low
-Write the outputs to columns H and I respectively.
-```
-
-**Automatic Raindrop bookmarking**
-
-```text
-Given title in C2 and author in E2, search Goodreads (or the web), find the canonical book URL, and add it to my Raindrop collection with tags: #reading #books.
-```
-
-**Daily summary generator**
-
-```text
-Summarize today’s key entries: sleep, top work items, one learning, one blunder, and one gratitude. Keep it ≤ 80 words.
-```
+These are the “organs” of the system — each with its own purpose and visual rhythm.
 
 ---
 
-## Inspirations & Resources
+## 📊 Advanced Visuals & Dashboards
 
-- **Template:** Stats Log HTML + GAS (download link coming)  
-- **Guide:** Connect ChatGPT ↔ Google Sheets — step‑by‑step (coming)  
-- **Examples:** Dashboard patterns and chart templates (coming)
+<div class="gallery">
+  <figure><img src="/images/rawdatapost/rawdata-money-dashboard.png" alt="Money Dashboard"/><figcaption>🧮 Money Dashboard</figcaption></figure>
+  <figure><img src="/images/rawdatapost/rawdata-wknd.png" alt="Weekend Sheet"/><figcaption>🎈 Weekend Sheet</figcaption></figure>
+  <figure><img src="/images/rawdatapost/rawdata-graphs1.png" alt="Graphs 1"/><figcaption>📉 Graphs I</figcaption></figure>
+  <figure><img src="/images/rawdatapost/rawdata-graphs2.png" alt="Graphs 2"/><figcaption>📈 Graphs II</figcaption></figure>
+  <figure><img src="/images/rawdatapost/rawdata-trophyshelf.png" alt="Trophy Shelf"/><figcaption>🏆 Trophy Shelf</figcaption></figure>
+</div>
 
-*(If you want early access to templates or to test a sheet, drop a comment or sign up for updates.)*
-
----
-
-## I won’t gatekeep — want help?
-
-I’ll gladly share templates, Apps Script snippets, or help you design a lightweight version that fits your life. Reply in the comments, DM me, or sign up for the LifeLoggerz newsletter.
+These transform raw data into visuals — a full life dashboard of habits, work, and reflection.
 
 ---
 
-## Questions for you (let’s talk)
+## 🔗 Related Posts
+This article is part **1 of 6** in the *LifeLoggerz Data System* series:
 
-- Do you track anything obsessively? What tools do you use?
-- How has tracking changed your habits or productivity?
-- Has anyone taken tracking to the extreme like this — or am I alone?
-
----
-
-## Extra: copyable snippets for sharing
-
-**SEO meta (paste into site/head)**
-
-- `title`: LifeLoggerz — From Paper Piles to ChatGPT‑Powered Google Sheets
-- `description`: How a PhD student built an automated Google Sheets system to track research, habits, music listening, and daily routines. Templates, scripts, and ChatGPT prompts included.
-
-**Social share text**
-
-- X/Twitter: “I turned my life into Google Sheets — from sleep & labs to music and moods. Here’s how I built LifeLoggerz and how you can too. 📊✨ [link]”
-- Mastodon: “LifeLoggerz — my experiment in living with spreadsheets. Templates & prompts coming soon. Open to DMs for help!”
-
-**Suggested featured image idea**
-
-- A tidy screenshot collage: left = 2023 hand notes, center = V2 sheet, right = V3 dashboard (alt text: “Evolution of LifeLoggerz: paper → sheets → dashboard”)
+1️⃣ **Raw Data Sheets** *(this post)*  
+2️⃣ [**Daily Summary — A Day of Data in Motion →**](/blog/daily-snapshot)  
+3️⃣ [**Archive of All Years**](#)  
+4️⃣ [**Day vs Day Comparison**](#)  
+5️⃣ [**Photo-A-Day Automation (GAS + Drive)**](#)  
+6️⃣ [**ChatGPT + GAS Integration for Smart Summaries**](#)
 
 ---
 
-If you want, I can:
+> “A spreadsheet may seem lifeless, but fill it with your days — and it becomes your autobiography in code.”  
+> — *LifeLoggerz*
 
-- Paste this as a ready‑to‑publish Markdown file with frontmatter formatted for your site (done).
-- Create a “starter pack” folder (template sheet, Apps Script stub, prompt examples) you can import.
-- Write the first tutorial: **Install the Stats Log modal in 10 minutes** with code and screenshots.
+<div className="post-nav">
+  <a className="btn-next" href="/blog/daily-snapshot" aria-label="Next Post: Daily Summary">Next Post → Daily Summary</a>
+</div>
 
-Which of those do you want next? I can start the starter pack or the tutorial — your call.
-
+<style>
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 1rem;
+  margin: 1.5rem 0;
+}
+.gallery figure {
+  margin: 0;
+  border-radius: 10px;
+  overflow: hidden;
+  background: #fafafa;
+  border: 1px solid #eee;
+  box-shadow: 0 3px 8px rgba(0,0,0,0.05);
+}
+.gallery img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+.gallery figcaption {
+  padding: 0.6rem 0.8rem;
+  font-size: 0.9rem;
+  color: #555;
+  text-align: center;
+}
+@media (max-width: 700px) {
+  .gallery {
+    display: flex;
+    overflow-x: auto;
+    gap: 0.75rem;
+    scroll-snap-type: x mandatory;
+    padding-bottom: 0.5rem;
+  }
+  .gallery figure {
+    flex: 0 0 80%;
+    scroll-snap-align: start;
+  }
+}
+</style>
