--- a/src/content/blog/redditseries.mdx
+++ b/src/content/blog/redditseries.mdx
@@ -1,5 +1,5 @@
 ---
-title: "The Raw Data Sheets — Quantifying My Life One Day at a Time"
+title: "The Raw Data Sheets — Quantifying My Life One Day"
 pubDate: "2025-10-19"
 description: "The foundation of the LifeLoggerz system — a daily Google Sheet where every stat, habit, and moment gets recorded, forming the base of all future analytics."
 tags: ["LifeLoggerz", "Google Sheets", "Raw Data", "Productivity", "Self-Improvement"]
